# geospatial-data-analysis

./: .dockerignore  .gitignore  README.md
.github/workflows/: build-and-deploy.yml  frontent-deploy.yml  run-batch-jobs.yml
docs/: API contracts.md  ARCHITECTURE.md  CICD.md
infra/: docker-compose.yml
infra/cloudformation/: api-service.yml  etl-service.yml  frontend-service.yml  network-base.yml  scraper-service.yml
lib/: __init__.py  pyproject.toml
lib/tsg_common/cache/: __init__.py  settings.py
lib/tsg_common/db/: README.md  __init__.py  base.py  engine.py  read_queries.py  settings.py  write_queries.py
lib/tsg_common/db/migrations/: env.py
lib/tsg_common/db/migrations/versions/: a0d357f04bc1_enable_postgis.py  a25bcebac98f_initial_schema.py
lib/tsg_common/db/models/: __init__.py  base_geo.py  county.py  international.py  msa.py  place.py  quickfacts.py  state.py
lib/tsg_common/s3_utils/: __init__.py  s3_utils.py
services/api/: .env.local  Dockerfile  pyproject.toml
services/api/app/: deps.py  logging_config.py  main.py  settings.py
services/api/app/middleware/: error_handler.py  rate_limit.py  request_id.py
services/api/app/models/: geo.py
services/api/app/routers/: health.py  places.py  quickfacts.py  reverse.py  tiles.py
services/etl/: Dockerfile  entrypoint.sh  environment.yml
services/etl/app/: extract_tiger_files.py  main.py  parse_quickfacts.py  settings.py  tiger_s3_paths.py
services/frontend/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml
services/frontend/src/: App.tsx
services/frontend/src/components/: ErrorToast.tsx  InteractionModePicker.tsx  LayerPicker.tsx  MapView.tsx
services/frontend/src/components/SidePanel/: NearbyList.tsx  Panel.tsx  QuickFacts.tsx
services/frontend/src/lib/: api.ts  store.ts
services/scraper/: Dockerfile  README.md  pyproject.toml
services/scraper/app/: main.py  quickfacts_dl.py  scrape_search.py  settings.py  tiger_dl.py  utils.py  validate_quickfacts.py
services/scraper/app/models/: geo_info.py  search_queries.py  tiger_paths.py
