[project]
name = "tsg-libs"
version = "0.1.8"
description = "Utils and helpers common across all services"
authors = [
    {name = "Mithilesh Hinge",email = "mithhinge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
name = "tsg-libs"
version = "0.1.8"
description = "Utils and helpers common across all services"
authors = ["Mithilesh Hinge <mithhinge@gmail.com>"]
packages = [{include = "tsg_common"}]

[project.optional-dependencies]
db = ["pydantic (>=2.11.4,<3.0.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "sqlalchemy (>=2.0.40,<3.0.0)", "geoalchemy2 (>=0.17.1,<0.18.0)", "psycopg2-binary (>=2.9.10,<3.0.0)"]
s3 = ["boto3 (>=1.38.9,<2.0.0)", "botocore (>=1.38.9,<2.0.0)"]
cache = ["orjson (>=3.10.18,<4.0.0)", "redis (>=6.0.0,<7.0.0)", "pydantic-settings (>=2.9.1,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

