[project]
name = "api"
version = "0.1.0"
description = "FastAPI service for geo endpoints"
authors = [
    {name = "Mithilesh Hinge",email = "mithhinge@gmail.com"}
]
packages = [{ include = "app" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tsg-libs[db,cache]",
]

[tool.poetry.dependencies]
tsg-libs = { path = "../../lib", develop = true, extras = ["db","cache"] }

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
