[project]
name = "scraper"
version = "0.1.0"
description = "Download TIGER shapefiles and scrape US Census QuickFacts website"
authors = [
    {name = "Mithilesh Hinge",email = "mithhinge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "dbfread (>=2.0.7,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tsg-libs[s3]",
]

[tool.poetry.dependencies]
tsg-libs = { path = "../../lib/", develop = true, extras = ["s3"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
